<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_15"
            android:src="@drawable/jiantou" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_bank_card"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:text="@string/hint_text29"
        android:textColor="@color/six_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/card_holder"
            android:textColor="@color/three_color"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="@dimen/dp_10"
            android:text="@string/cardholder_name"
            android:textColor="@color/three_color"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/card_number"
            android:textColor="@color/three_color"
            android:textSize="@dimen/sp_16" />


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/input_bank_card"
            android:padding="@dimen/dp_10"
            android:textColor="@color/three_color"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/shape_drawing"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/next"
        android:textColor="@color/white" />


</LinearLayout>