<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/dp_10"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_pass"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_33"
        android:layout_marginEnd="@dimen/dp_33"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/hint_code"
            android:textColor="@color/six_color"
            android:textSize="@dimen/sp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50">

            <EditText
                android:id="@+id/tv_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/yanzhengma"
                android:drawablePadding="@dimen/dp_20"
                android:hint="@string/hint_text4"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line_bg_color" />

            <com.shd.shop.widget.CountDownView
                android:id="@+id/countDownView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/line_bg_color" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/mima"
            android:drawablePadding="@dimen/dp_20"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/dp_15"
            android:maxLines="1"
            android:textSize="@dimen/sp_16" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/line_bg_color" />



        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/hint_text6"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_46"
            android:background="@drawable/yuanjiao"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>


</LinearLayout>