<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_23"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_5">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="@dimen/dp_10"
            android:src="@drawable/jiantou" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/three_color"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>

    <com.shd.shop.widget.ScrollInterceptScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/text_name"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/cardholder_name"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/phone_number"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/relieve_binding"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/account"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/hint_text30"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/modification_password"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/pay_password"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/real_name"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/clear_cache"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/cache"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/start_audio"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:text="@string/replace_acc"
                    android:textColor="@color/three_color"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/icon_arrow_2"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingEnd="@dimen/dp_16"
                    android:textColor="@color/six_color"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_30"
                android:background="@drawable/shape_drawing"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>


    </com.shd.shop.widget.ScrollInterceptScrollView>


</LinearLayout>