<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/dp_10"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/verify_acc"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />


    </RelativeLayout>



    <EditText
        android:id="@+id/tv_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_78"
        android:layout_marginEnd="@dimen/dp_33"
        android:background="@null"
        android:drawableLeft="@drawable/zhanghao"
        android:drawablePadding="@dimen/dp_20"
        android:hint="@string/hint_text3"
        android:inputType="number"
        android:maxLength="11"
        android:singleLine="true"
        android:textSize="@dimen/sp_16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_33"
        android:background="@color/line_bg_color" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_45"
        android:background="@drawable/yuanjiao"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />


</LinearLayout>